# ffmpeg

./: CMakeLists.txt  ffmpeg_reader.cpp  ffmpeg_reader.h  ffmpeg_writer.cpp  ffmpeg_writer.h  main.cpp  output.pcm  pcm2aac.cpp  pcm2aac.h  singleton_template.h  stream_reader.cpp  stream_reader.h  stream_writer.cpp  stream_writer.h  tools.cpp  tools.h  v.aac
